fix: fix button alignment

--- a/frontend/src/components/TaskForm/TaskForm.css
+++ b/frontend/src/components/TaskForm/TaskForm.css
@@ -21,7 +21,8 @@ form button {
 	border-radius: 5px; 
 	padding: 0.5rem; 
 	border: none; 
-	font-weight: bold; 
+	font-weight: bold;
+	align-self: center; 
 }
 
 .no-tasks {
